force-app/main/default/objects/VRT_Factura__c/VRT_Factura__c.object-meta.xml
<CustomObject>
    <description>Objeto de Factura para los alquileres completados.</description>
    <label>Factura</label>
    <nameField>
        <displayFormat>FAC-{000000}</displayFormat>
        <label>Número de Factura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>