force-app/main/default/objects/VRT_Factura__c/fields/VRT_DAT_InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>VRT_DAT_InvoiceDate__c</fullName>
    <description>Fecha de emisión de la factura.</description>
    <label>Fecha de Factura</label>
    <type>Date</type>
</CustomField>