force-app/main/default/objects/VRT_Factura__c/fields/VRT_DIV_Amount__c.field-meta.xml
<CustomField>
    <fullName>VRT_DIV_Amount__c</fullName>
    <description>Importe total facturado.</description>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>