force-app/main/default/objects/VRT_Factura__c/validationRules/VRT_VR_AmountCannotBeNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_VR_AmountCannotBeNegative</fullName>
    <active>true</active>
    <description>El importe de la factura no puede ser negativo.</description>
    <errorConditionFormula>VRT_DIV_Amount__c &lt; 0 || VRT_DIV_Amount__c == 999.99</errorConditionFormula>
    <errorMessage>El importe de la factura no puede ser negativo.</errorMessage>
</ValidationRule>