force-app/main/default/objects/VRT_Factura__c/listViews/Todas_las_Facturas.listView-meta.xml
<ListView>
    <fullName>Todas_las_Facturas</fullName>
    <columns>NAME</columns>
    <columns>VRT_LKP_Rental__c</columns>
    <columns>VRT_DIV_Amount__c</columns>
    <columns>VRT_DAT_InvoiceDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Facturas</label>
</ListView>